[package]
name = "webpify"
edition = "2021"
version = "0.3.0"
publish = false
description = "High-performance CLI tool for batch converting images to WebP format"
authors = ["Haobo Zhang <chaunice@163.com>"]
license = "MIT"

[[bin]]
name = "webpify"
path = "src/main.rs"

[dependencies]
# Image processing
image = { version = "0.25.6", features = ["webp", "jpeg", "png", "gif", "bmp", "tiff"] }
webp = "0.3.0"
imageproc = "0.25.0"  # For advanced image analysis

# CLI and argument parsing
clap = { version = "4.5.41", features = ["derive", "color"] }

# Parallel processing
rayon = "1.7"
tokio = { version = "1.0", features = ["full"] }

# File system operations
walkdir = "2.3"
glob = "0.3"

# Progress and logging
indicatif = { version = "0.18.0", features = ["rayon"] }
env_logger = "0.11.8"
log = "0.4"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
csv = "1.3"
toml = "0.9.2"
humansize = "2.1"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
trash = "5.2.2"
dirs = "6.0.0"
crossbeam-channel = "0.5.15"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
