[package]
name = "webpify"
edition = "2024"
version = "0.4.0"
publish = false
description = "High-performance tool for batch converting images to WebP format"
authors = ["Haobo Zhang <chaunice@163.com>"]
license = "MIT"

[[bin]]
name = "webpify"
path = "src/main.rs"

[dependencies]
# Image processing
image = { version = "0.25.6", features = ["webp", "jpeg", "png", "gif", "bmp", "tiff"] }
webp = "0.3.0"

# CLI and argument parsing
clap = { version = "4.5.41", features = ["derive", "color"], optional = true }

# Parallel processing
rayon = "1.7"

# File system operations
walkdir = "2.3"

# Progress and logging
indicatif = { version = "0.18.0", features = ["rayon"], optional = true }
env_logger = "0.11.8"
log = "0.4"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
csv = "1.3"
toml = "0.9.3"
humansize = "2.1"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
trash = "5.2.2"
dirs = "6.0.0"
crossbeam-channel = "0.5.15"

# GUI dependencies (optional)
egui = { version = "0.32.0", optional = true }
eframe = { version = "0.32.0", optional = true }
rfd = { version = "0.15", optional = true }

[features]
default = ["cli"]
cli = ["clap", "indicatif"]
gui = ["egui", "eframe", "rfd"]

[[bin]]
name = "webpify-gui"
path = "src/gui.rs"
required-features = ["gui"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
